# WP-Project

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  db.sqlite3.them  entrypoint.sh  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
backend/accounts/management/commands/: setup_police_ranks.py
backend/accounts/serializers/: classes.py  fields.py
backend/approvals/: models.py
backend/cases/: admin.py  models.py  serializers.py  services.py  submissiontypes.py  tests.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/evidence/: admin.py  apps.py  models.py  permissions.py  serializers.py  submissiontypes.py  tests.py  urls.py  views.py
backend/finance/: models.py
backend/investigation/: apps.py  models.py  permissions.py  serializers.py
backend/judiciary/: apps.py  models.py
backend/payments/: admin.py  apps.py  models.py  serializers.py  submissiontypes.py  tests.py  urls.py  views.py
backend/payments/templates/: payment_failure.html  payment_success.html
backend/submissions/: admin.py  apps.py  models.py  service.py  tests.py  urls.py  views.py
backend/submissions/serializers/: classes.py
backend/submissions/submissiontypes/: classes.py  registry.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Auth.jsx  Auth.test.jsx  Cases.jsx  CustomSelect.jsx  DetectiveBoard.jsx  (+9 more)
(+4 files in other folders)
